@@ -1,10 +1,0 @@
-<?xml version="1.0"?>
-<!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
-this repository contains the full copyright notices and license terms. -->
-<data>
-    <xpath expr="//field[@name='shipment_internal_sequence']"
-        position="after">
-        <label name="cost_price_counterpart_account"/>
-        <field name="cost_price_counterpart_account"/>
-    </xpath>
-</data>
