@@ -1,3 +1,5 @@
+* Add account stock method on fiscal year
+
 Version 3.2.0 - 2014-04-21
 * Bug fixes (see mercurial logs for details)
 * Remove account_move
